[package]
name = "rust-age-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
age = {version = "0.11.1", features = ["armor"] }
getrandom02 = { package = "getrandom", version = "0.2.15", features = ["js"] }
getrandom03 = { package = "getrandom", version = "0.3.2", features = ["wasm_js"] }
uuid = "1.16.0"
